--- a/index.html
+++ b/index.html
@@ -1,16 +1,1 @@
-<!doctype html><html>
-<head>
-<title>https://blog.deraco.fr/fr/</title>
-<link rel=canonical href=https://blog.deraco.fr/fr/>
-<meta name=robots content="noindex">
-<meta charset=utf-8>
-<noscript>
-<meta http-equiv=refresh content="0; url=https://blog.deraco.fr/fr/">
-</noscript>
-<script>(function(){var a,b;if(window.location.pathname!=='/'){window.location.replace('https://blog.deraco.fr/fr/');return}a=function(){var c=window.navigator,d=['language','browserLanguage','systemLanguage','userLanguage'],a,b;if(Array.isArray(c.languages))for(a=0;a<c.languages.length;a++)if(b=c.languages[a],b&&b.length)return b;for(a=0;a<d.length;a++)if(b=c[d[a]],b&&b.length)return b;return'en'},b=a(),b.indexOf('fr')!==-1?window.location.replace('/fr/'):window.location.replace('/en/')})()</script>
-</head>
-<body>
-<h1>Rerouting</h1>
-<p>You should be rerouted in a jiff, if not, <a href=https://blog.deraco.fr/fr/>click here</a>.</p>
-</body>
-</html>
+<!doctype html><html><head><title>https://blog.deraco.fr/fr/</title><link rel=canonical href=https://blog.deraco.fr/fr/><meta name=robots content="noindex"><meta charset=utf-8><noscript><meta http-equiv=refresh content="0; url=https://blog.deraco.fr/fr/"></noscript><script>(function(){if(window.location.pathname!=="/"){window.location.replace("https://blog.deraco.fr/fr/");return}var e=function(){var e,t,n=window.navigator,s=["language","browserLanguage","systemLanguage","userLanguage"];if(Array.isArray(n.languages))for(e=0;e<n.languages.length;e++)if(t=n.languages[e],t&&t.length)return t;for(e=0;e<s.length;e++)if(t=n[s[e]],t&&t.length)return t;return"en"},t=e();t.indexOf("fr")!==-1?window.location.replace("/fr/"):window.location.replace("/en/")})()</script></head><body><h1>Rerouting</h1><p>You should be rerouted in a jiff, if not, <a href=https://blog.deraco.fr/fr/>click here</a>.</p></body></html>
